# agent-kit

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  pyproject.toml
agent_kit/: __init__.py  exceptions.py  types.py
agent_kit/agent/: __init__.py  agent.py  loop.py
agent_kit/audit/: __init__.py  chain.py
agent_kit/cloud/: __init__.py  models.py  reporter.py
agent_kit/memory/: __init__.py  in_memory.py  sqlite.py
agent_kit/observability/: __init__.py  tracer.py
agent_kit/orchestrator/: __init__.py  dag.py  pipeline.py
agent_kit/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
agent_kit/reliability/: __init__.py  circuit_breaker.py  retry.py
agent_kit/tools/: __init__.py  base.py  registry.py
docs/: api-reference.md  cloud-quickstart.md  self-hosting.md  troubleshooting.md
examples/: cloud_monitored.py  hello_agent.py  multi_tool_agent.py  pipeline_example.py  research_dag.py  safe_agent.py
server/: alembic.ini  pyproject.toml
server/app/: audit_chain.py  auth.py  database.py  main.py  models.py  schemas.py
server/app/alerting/: dispatch.py  evaluator.py
server/app/routers/: alerts.py  audit.py  ingest.py  metrics.py  support.py
server/migrations/: env.py
server/migrations/versions/: 001_initial_schema.py  002_metrics_schema.py  003_alerting.py  004_org_tier.py
server/tests/: conftest.py  test_alerts.py  test_ingest.py  test_metrics.py  test_support.py
specs/: 00-platform-overview.md  01-audit-trail.md  02-fleet-dashboard.md  03-alerting.md  04-sla-support.md  05-dashboard-ui.md
tests/: conftest.py  test_agent.py  test_audit.py  test_circuit_breaker.py  test_cloud_reporter.py  test_dag.py  test_pipeline.py  test_retry.py  test_sqlite_memory.py  test_tools.py
